# gradio_component_sidebarmenu

./: .gitignore  README.md  pyproject.toml
src/gradio_sidebar_menu/: __init__.py  gradio_sidebar_menu.py
